--- a/DREAMS/DREAMS.csproj
+++ b/DREAMS/DREAMS.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Actor.cs" />
     <Compile Include="AdventureGame.cs" />
-    <Compile Include="Animation.cs" />
+    <Compile Include="GraphicsManager.cs" />
     <Compile Include="Door.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Form1.cs">
