--- a/DREAMS/DREAMS.csproj
+++ b/DREAMS/DREAMS.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actor.cs" />
-    <Compile Include="AdventureEngine\AdventureGame.cs" />
-    <Compile Include="AdventureEngine\GraphicsManager.cs" />
+    <Compile Include="AdventureGame.cs" />
+    <Compile Include="GraphicsManager.cs" />
     <Compile Include="Door.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Form1.cs">
