--- a/AdventureEngine/AdventureEngine.csproj
+++ b/AdventureEngine/AdventureEngine.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdventureGame.cs" />
-    <Compile Include="GraphicsManager.cs" />
+    <Compile Include="Class1.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
