--- a/DREAMS/DREAMS.csproj
+++ b/DREAMS/DREAMS.csproj
@@ -46,9 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actor.cs" />
-    <Compile Include="Door.cs" />
-    <Compile Include="Entity.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,14 +53,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Globals.cs" />
-    <Compile Include="Item.cs" />
     <Compile Include="MyGame.cs" />
-    <Compile Include="Object.cs" />
-    <Compile Include="Quest.cs" />
-    <Compile Include="Room.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sprite.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +83,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Sprites\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AdventureEngine\AdventureEngine.csproj">
+      <Project>{2f93ec1a-c39f-46d9-b8cc-e91a70dda19c}</Project>
+      <Name>AdventureEngine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
