--- a/AdventureEngine/AdventureEngine.csproj
+++ b/AdventureEngine/AdventureEngine.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Actor.cs" />
     <Compile Include="AdventureGame.cs" />
     <Compile Include="GraphicsManager.cs" />
+    <Compile Include="Line.cs" />
     <Compile Include="Object.cs" />
     <Compile Include="Quest.cs" />
     <Compile Include="Room.cs" />
