Переписан ChangeSprite. Удален список спрайтов

--- a/AdventureEngine/AdventureEngine.csproj
+++ b/AdventureEngine/AdventureEngine.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Actor.cs" />
     <Compile Include="AdventureGame.cs" />
+    <Compile Include="Animation.cs" />
     <Compile Include="GraphicsManager.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Object.cs" />
