--- a/DREAMS/DREAMS.csproj
+++ b/DREAMS/DREAMS.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ghost.cs" />
     <Compile Include="Girl.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="MyGame.cs" />
