Изменены пространства имен. Добавлен файл с репликами и метод для их получения

--- a/DREAMS/DREAMS.csproj
+++ b/DREAMS/DREAMS.csproj
@@ -95,5 +95,8 @@
       <Name>AdventureEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Texts\TextFile1.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
